test/SemanticAnalysis/Inherit/OverrideOneMethod.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class Parent() {
	void method() { }
}

// CHECK: .loci:9:13: error: inheritance not currently implemented
class Child(inherit Parent parent) {
// CHECK: .loci:11:16: error: 'override' not currently implemented
	void method() override { }
}

void function(Child& child) {
	child.method();
}

// CHECK: 2 errors generated.
